--- a/scss/_section-6.scss
+++ b/scss/_section-6.scss
@@ -25,6 +25,7 @@
           padding-bottom: 40.4px;
           padding-right: 60px;
           gap: 40px;
+          max-width: 360px;
           }
 
         .first-element{
